infrastructure/kubernetes/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
  - name: http
    port: 3000
    targetPort: 3000
