infrastructure/kubernetes/product-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  labels:
    app.kubernetes.io/name: product-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  name: http
